[metadata]
name = elastic-recheck
summary = "Classify tempest-devstack failures using ElasticSearch"
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    elastic_recheck
data_files =
    share/elastic-recheck = web/share/*

[entry_points]
console_scripts =
    elastic-recheck = elastic_recheck.bot:main
    elastic-recheck-graph = elastic_recheck.cmd.graph:main
    elastic-recheck-success = elastic_recheck.cmd.check_success:main
    elastic-recheck-uncategorized = elastic_recheck.cmd.uncategorized_fails:main
    elastic-recheck-query = elastic_recheck.cmd.query:main

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = elastic_recheck/locale
domain = elastic_recheck

[update_catalog]
domain = elastic-recheck
output_dir = elastic_recheck/locale
input_file = elastic_recheck/locale/elastic-recheck.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = elastic_recheck/locale/elastic-recheck.pot
